clean up error handling and add contact and about pages

--- a/FlaskWebProject1/KaylesWebProject/templates/about.html
+++ b/FlaskWebProject1/KaylesWebProject/templates/about.html
@@ -2,9 +2,98 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2 align="center">Mary Beth Smrtic </h2>
+<p align="center">
+    6 Jennifer Drive <br />
+    Westford MA 01886<br />
+    781-367-4016 <br />
+    <a href="mailto:mbsmrtic@gmail.com"> mbsmrtic@gmail.com</a><br />
+    <a href="http://linkedin.com/in/mbsmrtic"> linkedin.com/in/mbsmrtic</a><br />
+    <a href="http://twitter.com/mbsmrtic"> @mbsmrtic </a><br />
+    <a href="http://github.com/mbsmrtic"> github.com/mbsmrtic </a><br />
+</p>
 
-<p>Use this area to provide additional information.</p>
+<p align="center">
+    Experienced, skilled software engineer driven to craft software that transforms complexity into elegant simplicity to improve health care.
+</p>
+<h3>Experience</h3>
+<h4>CRA Health  2016 - Present</h4>
+<p>
+    Senior Software Engineer <br />
+    Full stack engineer developing software that calculates about 100,000 breast cancer risk assessments per month. My work is done in .net, C#, JavaScript, SQL. I drove the streamlining of a complex desktop system to make our product scalable to the current cloud implementation for health care providers in over 70 hospitals, mammography centers and genetics clinics.
+</p>
 
-{% endblock %}
+<h4>Avant-garde Health 2015</h4>
+<p>
+    Senior Backend Developer <br />
+    Designed and implemented extract, transform, load system for orthopedic surgeries in Python.
+</p>
+<h4>Athenahealth    2013 - 2015</h4>
+<p>
+    Data Science Analytics Manager <br />
+    Analysis of key performance indicators using SQL, Perl and Birst.
+</p>
+<h4>University of Massachusetts, Lowell    2003 - 2012</h4>
+<p>
+    Researcher and Graduate Student <br />
+    Researcher in the Computer Science department Institute for Visualization and Perception Research. Was manager of and developer in a team developing <a href="https://www.computerworld.com/article/2501177/business-intelligence/weave-open-source-datavisualization-offers-power--flexibility.html"> Weave Visual Analytics </a> software and the Universal Visualization Platform.
+</p>
+<h4>    Flashbit Technologies   2000 - 2003</h4>
+<p>
+    Founder and Developer <br />
+    Developed website software to detect the type of device making the page request and if it's a small device like a phone, automatically adjust the page and convert the protocol.
+</p>
+<h4>iMarket    1990 - 2000</h4>
+<p>
+    Cofounder and Principal Software Engineer <br />
+    As backend database engineer, designed and implemented software that improved compression and performance of set operations. Was the driver, designer and implementer of the company's first internet based functionality. This contributed to the value of company leading to the sale of the company to Dun & Bradstreet
+</p>
+
+<h4>Lotus Development Corporation  1987 - 1990 </h4>
+<p>
+    Software Engineer<br />
+</p>
+
+
+
+<h3>Education</h3>
+<h4>PhD, Biomedical Engineering and Biotechnology</h4>
+<p>University of Massachusetts, Lowell</p>
+<h4> MS, Biomedical Engineering and Biotechnology </h4>
+<p>University of Massachusetts, Lowell</p>
+<h4>BA, Computer and Information Science</h4>
+<p> State University of New York, Potsdam</p>
+<p>
+    Johns Hopkins University Computing for Data Analysis on Coursera Completed with grade of 95% with Distinction<br />
+    World Hellenic Biomedical Association International Summer School in Medical & Biosciences Research & Management Athens & Laconia Greece
+</p>
+<h3> Skills </h3>
+<p>
+    Skilled object-oriented developer <br />
+    C#, Python, SQL, JavaScript, .net, Visual Studio, Emacs, Git, Perl, Java <br />
+    Agile development; sprints, embrace change, balance between team work and curiosity and passion driven work<br />
+    Test Driven Design
+</p>
+<h3>Publications</h3>
+<p>
+    Purushe, Shweta & Grinstein, Georges & Smrtic, Mary Beth & Lyons, Helen. (2011). <b>Interactive Animated Visualizations of Breast, Ovarian Cancer and Other Health Indicator Data Using Weave, an Interactive Web -- based Analysis and Visualization Environment.</b> Proceedings of the International Conference on Information Visualization. 247-252. 10.1109/IV.2011.108.
+    <br /><br />
+    Bettencourt, Brian & Drohan, Brian & T Ireland, Andrea & Santhanam, Mahalakshmi & Smrtic, Mary Beth & Sullivan, Erin. (2009).<b> Natural Variation in Drosophila Stressed Locomotion Meets or Exceeds Variation Caused by Hsp70 Mutation: Analysis of Behavior and Performance.</b> Behavior genetics. 39. 306-20. 10.1007/s10519-009-9256-1.
+    <br /><br />
+
+    Gee, Alexander & Li, Hongli & Yu, Min & Smrtic, Mary Beth & Cvek, Urska & Goodell, Howie & Gupta, Vivek & Lawrence, Christine & Zhou, Jianping & Chiang, Chih-Hung & Grinstein, Georges. (2005). <b>The Universal Visualization Platform.</b> Proceedings of SPIE - The International Society for Optical Engineering. 5669. 10.1117/12.592242.
+    <br /><br />
+
+    Smrtic, Mary Beth & Grinstein, Georges. (2004).<b> A Case Study in the Use of Extreme Programming in an Academic Environment.</b> 175-182. 10.1007/978-3-540-27777-4_18. Conference: Extreme Programming and Agile Methods - XP/Agile Universe 2004, 4th Conference on Extreme Programming and Agile Methods, Calgary, Canada, August 15-18, 2004, Proceedings
+    <br /><br />
+
+    Baumann, A., Smrtic, M.B., Dufilie, A., Mass, W. and Georges Grinstein, Proceedings of the IEEE 2009 Visualization Conference, <b>Experiences in the Development of a Measure and Indicator Web-Based Visualization System</b>, Atlantic City, New Jersey, October 2009.
+    <br /><br />
+
+    Smrtic MB., Grinstein G. (2005) <b>Interactive Visualization of Microarray Data on Pathways</b>, Proceedings of the 2005 BioIT Conference, Boston, MA
+    <br /><br />
+
+    US Patent 20060218563 <b>The Universal Visualization Platform</b>
+</p>
+
+    {% endblock %}
