--- a/FlaskWebProject1/KaylesWebProject/templates/contact.html
+++ b/FlaskWebProject1/KaylesWebProject/templates/contact.html
@@ -2,19 +2,18 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
+<h2>{{ title }}</h2>
 <h3>{{ message }}</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    6 Jennifer Drive<br />
+    Westford, MA 01886<br />
+    <br />
+    781.367.4016
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <a href="mailto:mbsmrtic@gmail.com">mbsmrtic@gmail.com</a><br />
 </address>
 
 {% endblock %}
