added link to github repo

--- a/FlaskWebProject1/KaylesWebProject/templates/index.html
+++ b/FlaskWebProject1/KaylesWebProject/templates/index.html
@@ -6,9 +6,8 @@
     <h1>Kayles Game</h1>
     <p class="lead">
         Mary Beth Smrtic's Kayles game extension
-
     </p>
-    <p><a href="http://flask.pocoo.org/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <p><a href="http://github.com/mbsmrtic/Kayles" class="btn btn-primary btn-large">Github repo &raquo;</a></p>
 </div>
 
 <div class="row">
